spec/e2e/function/body_must_be_block.lit
# error: [line 2] Error at "123": I was expecting a '{' after the function name.
fn f 123;
